refactor: enable Transaction Report and PDF generation, service, repository, resource, UI, starting to refactor mappings